Multiple changes: * Removes unnecessary code and files. (refs #1) * Adds basic routing setup for different pages. (refs #2)

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-dark bg-dark mb-5">
-    <a class="navbar-brand" href="/">Highlighter</a>
+    <a class="navbar-brand" routerLink="/">Highlighter</a>
     <div class="navbar-expand mr-auto">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home</a>
-        <a class="nav-item nav-link" href="#">About</a>
-        <a class="nav-item nav-link" href="#">Imprint</a>
+        <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+        <a class="nav-item nav-link" routerLink="/about" routerLinkActive="active">About</a>
+        <a class="nav-item nav-link" routerLink="/imprint" routerLinkActive="active">Imprint</a>
       </div>
     </div>
     <div class="navbar-expand ml-auto navbar-nav">
