--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,8 @@
-<div id="injector1" class="shadowBox">Inject here the json</div>
-<div id="injector2" class="shadowBox">Inject here the json</div>
+<!-- HEADER COMPONENT -->
+<app-header></app-header>
 
-<app-layout>
-  <h1>Highlighter</h1>
-  <hr/> Finished: 8%
-  <p>
-    <ngb-progressbar type="info" [value]="8"></ngb-progressbar>
-  </p>
+<!-- REST OF LAYOUT -->
+<router-outlet></router-outlet>
 
-  <div class="jumbotron">
-    <h1>Angular CLI v6 + Bootstrap & FontAwesome</h1>
-    <p>
-      In this tutorial you learn how to use Angular CLI v6 with Bootstrap and FontAwesome!
-    </p>
-  </div>
-</app-layout>
+<!-- FOOTER COMPONENT -->
+<app-footer></app-footer>
