--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~font-awesome/css/font-awesome.css";
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+* {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+}
