--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,22 +1,26 @@
 <nav class="navbar navbar-dark bg-dark mb-5">
     <a class="navbar-brand" routerLink="/">Highlighter</a>
-    <div class="navbar-expand mr-auto">
+    <div class="navbar-expand mr-auto" style="padding-left:30px;">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+        <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">
+          <i class="fa fa-home" aria-hidden="true"></i> Home</a>
         <a class="nav-item nav-link" routerLink="/about" routerLinkActive="active">About</a>
         <a class="nav-item nav-link" routerLink="/imprint" routerLinkActive="active">Imprint</a>
       </div>
     </div>
     <div class="navbar-expand ml-auto navbar-nav">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#" target="_blank">
+        <a class="nav-item nav-link" href="https://github.com/fhstp/highlighter-webapp"
+          title="Github Project" target="_blank">
           <i class="fa fa-github"></i>
         </a>
-        <a class="nav-item nav-link" href="#" target="_blank">
-          <i class="fa fa-twitter"></i>
+        <a class="nav-item nav-link" href="https://www.fhstp.ac.at/de/forschung/projekte/contractvis-der-assistent-fuers-kleingedruckte"
+          title="University Website" target="_blank">
+          <i class="fa fa-university"></i>
         </a>
-        <a class="nav-item nav-link" href="#" target="_blank">
-          <i class="fa fa-medium"></i>
+        <a class="nav-item nav-link" href="https://www.netidee.at/contractvis"
+          title="Netidee Website" target="_blank">
+          <i class="fa fa-lightbulb-o"></i>
         </a>
       </div>
     </div>
