--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,6 @@
 
 <!-- FOOTER COMPONENT -->
 <app-footer></app-footer>
+
+<input type="text" id="data1" class="totallyHidden" (input)="onInputData($event)">
+<input type="text" id="data2" class="totallyHidden" (input)="onInputData($event)">
