--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -1,11 +1,15 @@
 <div class="container">
   <h1>Highlighter</h1>
-  <small>Hightlighter is a visual assistant for lengthy legal texts. Does the fine print matter?
-    <strong>Sure it does!</strong></small>
-  <hr/>
+  <small>Hightlighter ist ein visueller assitent für lange texte. Kommt es aufs Detail an?
+    <strong>Ja tut es!</strong></small>
+  <hr />
+
+  <br />
+  <br />
+
   <div class="row" style="margin-bottom: 10px;">
     <div class="col-md-12">
-      Example Dialogs:</div>
+      Example Dialogs (<small>Will be removed later... just for testing out dialogs</small>):</div>
   </div>
   <div class="row">
     <div class="col-md-4">
@@ -22,4 +26,20 @@
     </div>
   </div>
 
+  <br />
+  <br />
+
+  <div class="card text-center">
+    <div class="card-body">
+      <h5 class="card-title">Verwende Beispieldaten</h5>
+      <p class="card-text">Es ist möglich Beispieldaten von <a href="www.bergzeit.at/agbs" target="_blank">
+          Bergzeit</a> zu verwenden um die Visualisierung bzw. das Highlighten in Aktion zu sehen. Es wird hier nur
+        ein rechtlicher Text verarbeitet bzw. verwendet, weshalb keine "compare" Funktionalität vorhanden ist.</p>
+      <p>Um die Beispieldaten zu laden und zur Darstellung zu gelangen, klicke einfach auf den Button!</p>
+      <a routerLink="/viz" class="btn btn-primary" (click)="useSampleData()">Beispieldaten laden</a>
+    </div>
+    <div class="card-footer text-muted">
+      Die <strong>Webextension</strong> ist verfügbar unter: ...
+    </div>
+  </div>
 </div>
