--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,16 @@
 <!-- FOOTER COMPONENT -->
 <app-footer></app-footer>
 
+<!-- IMPORTANT!!!! LEAVE THIS-->
 <input type="text" id="data1" class="totallyHidden" (input)="onInputData($event)">
 <input type="text" id="data2" class="totallyHidden" (input)="onInputData($event)">
+
+<!-- Fancy loader-->
+<div class="loader">
+  <div class="face face1">
+    <div class="circle"></div>
+  </div>
+  <div class="face face2">
+    <div class="circle"></div>
+  </div>
+</div>
