--- a/src/app/subsites/viz/viz.component.html
+++ b/src/app/subsites/viz/viz.component.html
@@ -1,13 +1,20 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div [className]="isComparison ? 'col-md-6' : 'col-md-12'">
       <h2>Data</h2>
       <span>Origin: <strong>{{ firstWebsiteName }}</strong></span>
     </div>
+    <div [hidden]="!isComparison" class="col-md-6">
+      <h2>Data 2</h2>
+      <span>Origin: <strong>{{ secondWebsiteName }}</strong></span>
+    </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
+    <div [className]="isComparison ? 'col-md-6' : 'col-md-12'">
       <div #dataContainer class="textContainer"></div>
+    </div>
+    <div [hidden]="!isComparison" class="col-md-6">
+      <div #dataContainer2 class="textContainer"></div>
     </div>
   </div>
 </div>
