--- a/src/app/subsites/viz/viz.component.css
+++ b/src/app/subsites/viz/viz.component.css
@@ -4,9 +4,12 @@
     word-break: keep-all;
     white-space: pre-wrap;
     margin-bottom: 8%;
-    padding: 8px;
-
-    -moz-box-shadow: inset 0 0 8px #000000;
-    -webkit-box-shadow: inset 0 0 8px #000000;
-    box-shadow: inset 0 0 8px #000000;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
 }
