Add Screenshot to compare area - in progress (ref #14)

--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -94,7 +94,7 @@
 
         <div class="row">
           <div class="col-md-6 text-center">
-            <p><img src="assets/criteria.png" height="300px" /></p>
+            <p><img src="assets/criteria.png" height="350px" /></p>
           </div>
           <div class="col-md-6">
             <p class="blocksatz">
@@ -110,7 +110,7 @@
 
         <div class="row">
           <div class="col-md-6 text-center">
-            <p><img src="assets/check_agbs.png" height="300px" /></p>
+            <p><img src="assets/check_agbs.png" height="350px" /></p>
           </div>
           <div class="col-md-6">
             <p class="blocksatz">
@@ -154,24 +154,29 @@
                 <div class="col-md-6">
                   <p class="blocksatz">
                     2) Gehe zum anderen Onlineshops,
-                    markiere den zweiten Rechtstext und klicke auf den HighLighter Button.
+                    markiere den zweiten Rechtstext und klicke auf den HighLighter Button um die Extention zu öffnen.
                   </p>
                 </div>
               </div>
 
 
               <div class="row">
-                <div class="col-md-6">
-                  <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
+                <div class="col-md-6 text-center">
+                  <p><img src="assets/compare.png" width="350px" /></p>
                 </div>
                 <div class="col-md-6">
                   <p class="blocksatz">
-                    3) Wähle jetzt die Vergleichsfunktion aus.
-                  </p>
+                    3) Wähle jetzt die Vergleichsfunktion aus indem du die Checkbox unterhalb des Textfelds aktivierst.  </p>
+                    <p>4) Du kannst den ersten Rechtstext aus den
+                    bereits geladene AGBs auswählen.
+                    Du kannst auch einen AGB-Text analysieren,
+                    indem Du die AGBs manuell aus dem Onlineshop in das
+                    Textfeld hinein kopierst und auch den Link des Onlineshops einfügst.</p>
+                 
                 </div>
               </div>
 
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-md-6">
                   <p><img src="assets/placeholder_highlighter.png" width="400px" /></p>
                 </div>
@@ -180,25 +185,28 @@
                     4) Du kannst den ersten Rechtstext aus den
                     bereits geladene AGBs auswählen.
                     Du kannst auch einen AGB-Text analysieren,
-                    indem Du die AGBs aus dem Onlineshop in das
-                    Textfeld hinein kopierst und auch den Link des Onlineshops befüllst.
+                    indem Du die AGBs manuell aus dem Onlineshop in das
+                    Textfeld hinein kopierst und auch den Link des Onlineshops einfügst.
                   </p>
                 </div>
-              </div>
+              </div> -->
 
               <div class="row">
-                <div class="col-md-6">
-                  <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
+                <div class="col-md-6 text-center">
+                  <p><img src="assets/compare_criteria_selection.png" width="350px" /></p>
                 </div>
                 <div class="col-md-6">
                   <p class="blocksatz">
                     5) Treffe nun wieder deine Kriterienauswahl.
                   </p>
+                  <p>6) Vergleich nun deine AGBs, indem Du auf den Button klickst.
+                    Du wirst wieder auf eine Webseite in einen eigenen Bereiche geleitet,
+                    wo du die beiden AGB-Texte miteinander vergleichen kannst.</p>
                 </div>
               </div>
 
 
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-md-6">
                   <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
                 </div>
@@ -209,7 +217,7 @@
                     wo du die beiden AGB-Texte miteinander vergleichen kannst.
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>   
       </ng-template>
     </ngb-panel>
