Multiple Adaptions (ref #14)

--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -9,7 +9,7 @@
           <strong>Ja tut es!</strong>
           <br />
           <br />
-          <p><img src="assets/placeholder_highlighter.png" /></p>
+          <p><img src="assets/highlighter_copy.png" width="70%"/></p>
 
         </div>
       </div>
@@ -36,20 +36,20 @@
   <br />
 
   <div class="row">
-      <div class="col-md-12">
-        <h4 class="text-center">
-          Wie funktioniert das Tool HighLighter?
-        </h4>
-        <br />
-        <br />
-      </div>
+    <div class="col-md-12">
+      <h4 class="text-center">
+        Wie funktioniert HighLighter?
+      </h4>
+      <br />
+      <br />
     </div>
+  </div>
 
   <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
-      <ngb-panel>
+    <ngb-panel>
       <ng-template ngbPanelTitle>
-          <span class="heading_accordion">Analysiere Rechtstexte</span>
-        </ng-template>
+        <span class="heading_accordion">Analysiere Rechtstexte</span>
+      </ng-template>
       <ng-template ngbPanelContent>
 
         <div class="row">
@@ -62,7 +62,8 @@
               installieren.
               Das Highlighter Tool kann derzeit im <strong class="blue_highlight">Google Chrome</strong> verwendet
               werden.
-              <br /> <br /> Lade dir <a href="https://www.dropbox.com/s/xwngtk4o3zoxvui/Highlighter-0.0.0-chrome.zip?raw=1">hier</a> die Web-Extention herunter.</p>
+              <br /> <br /> Lade dir <a href="https://www.dropbox.com/s/xwngtk4o3zoxvui/Highlighter-0.0.0-chrome.zip?raw=1">hier</a>
+              die Web-Extention herunter.</p>
             <p class="info_box blocksatz">Gib folgenden Befehl in deine Adresszeile des Google Chromes ein: <strong
                 class="blue_highlight">chrome://extensions/</strong>.
               Du gelangst auf die Erweiterungen-Seite.</p>
@@ -130,95 +131,66 @@
       </ng-template>
       <ng-template ngbPanelContent>
 
-          <div class="container-fluid">       
+        <div class="container-fluid">
 
-              <div class="row">
-                <div class="col-md-6">
-                  <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
-                </div>
+          <div class="row">
+            <div class="col-md-6">
+              <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
+            </div>
 
-                <div class="col-md-6">
-                  <p class="blocksatz">1) Zuerst kannst du den ersten Rechtstext laden,
-                    indem du ihn markierst und auf den HighLighter Button klickst.
-                    Er wird dann unter dann in der Browser Extensions zwischengespeichert.
-                    Du kannst die Kriterienauswahl schließen.
-                  </p>
-                  </div> 
-                </div>                
-
-
-                <div class="row">
-                <div class="col-md-6">
-                  <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
-                </div>
-                <div class="col-md-6">
-                  <p class="blocksatz">
-                    2) Gehe zum anderen Onlineshops,
-                    markiere den zweiten Rechtstext und klicke auf den HighLighter Button um die Extention zu öffnen.
-                  </p>
-                </div>
-              </div>
+            <div class="col-md-6">
+              <p class="blocksatz">1) Zuerst kannst du den ersten Rechtstext laden,
+                indem du ihn markierst und auf den HighLighter Button klickst.
+                Er wird dann unter dann in der Browser Extensions zwischengespeichert.
+                Du kannst die Kriterienauswahl schließen.
+              </p>
+            </div>
+          </div>
 
 
-              <div class="row">
-                <div class="col-md-6 text-center">
-                  <p><img src="assets/compare.png" width="350px" /></p>
-                </div>
-                <div class="col-md-6">
-                  <p class="blocksatz">
-                    3) Wähle jetzt die Vergleichsfunktion aus indem du die Checkbox unterhalb des Textfelds aktivierst.  </p>
-                    <p>4) Du kannst den ersten Rechtstext aus den
-                    bereits geladene AGBs auswählen.
-                    Du kannst auch einen AGB-Text analysieren,
-                    indem Du die AGBs manuell aus dem Onlineshop in das
-                    Textfeld hinein kopierst und auch den Link des Onlineshops einfügst.</p>
-                 
-                </div>
-              </div>
-
-              <!-- <div class="row">
-                <div class="col-md-6">
-                  <p><img src="assets/placeholder_highlighter.png" width="400px" /></p>
-                </div>
-                <div class="col-md-6">
-                  <p class="blocksatz">
-                    4) Du kannst den ersten Rechtstext aus den
-                    bereits geladene AGBs auswählen.
-                    Du kannst auch einen AGB-Text analysieren,
-                    indem Du die AGBs manuell aus dem Onlineshop in das
-                    Textfeld hinein kopierst und auch den Link des Onlineshops einfügst.
-                  </p>
-                </div>
-              </div> -->
-
-              <div class="row">
-                <div class="col-md-6 text-center">
-                  <p><img src="assets/compare_criteria_selection.png" width="350px" /></p>
-                </div>
-                <div class="col-md-6">
-                  <p class="blocksatz">
-                    5) Treffe nun wieder deine Kriterienauswahl.
-                  </p>
-                  <p>6) Vergleich nun deine AGBs, indem Du auf den Button klickst.
-                    Du wirst wieder auf eine Webseite in einen eigenen Bereiche geleitet,
-                    wo du die beiden AGB-Texte miteinander vergleichen kannst.</p>
-                </div>
-              </div>
+          <div class="row">
+            <div class="col-md-6">
+              <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
+            </div>
+            <div class="col-md-6">
+              <p class="blocksatz">
+                2) Gehe zum anderen Onlineshops,
+                markiere den zweiten Rechtstext und klicke auf den HighLighter Button um die Extention zu öffnen.
+              </p>
+            </div>
+          </div>
 
 
-              <!-- <div class="row">
-                <div class="col-md-6">
-                  <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
-                </div>
-                <div class="col-md-6">
-                  <p class="blocksatz">
-                    6) Vergleich nun deine AGBs, indem Du auf den Button klickst.
-                    Du wirst wieder auf eine Webseite in einen eigenen Bereiche geleitet,
-                    wo du die beiden AGB-Texte miteinander vergleichen kannst.
-                  </p>
-                </div>
-              </div> -->
-            </div>   
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <p><img src="assets/compare.png" width="350px" /></p>
+            </div>
+            <div class="col-md-6">
+              <p class="blocksatz">
+                3) Wähle jetzt die Vergleichsfunktion aus indem du die Checkbox unterhalb des Textfelds aktivierst. </p>
+              <p>4) Du kannst den ersten Rechtstext aus den
+                bereits geladene AGBs auswählen.
+                Du kannst auch einen AGB-Text analysieren,
+                indem Du die AGBs manuell aus dem Onlineshop in das
+                Textfeld hinein kopierst und auch den Link des Onlineshops einfügst.</p>
+
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <p><img src="assets/compare_criteria_selection.png" width="350px" /></p>
+            </div>
+            <div class="col-md-6">
+              <p class="blocksatz">
+                5) Treffe nun wieder deine Kriterienauswahl.
+              </p>
+              <p>6) Vergleich nun deine AGBs, indem Du auf den Button klickst.
+                Du wirst wieder auf eine Webseite in einen eigenen Bereiche geleitet,
+                wo du die beiden AGB-Texte miteinander vergleichen kannst.</p>
+            </div>
+          </div>
+        </div>
       </ng-template>
     </ngb-panel>
   </ngb-accordion>
