multiple adaptions (ref #14)

--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -67,7 +67,7 @@
             <p class="info_box blocksatz">Gib folgenden Befehl in deine Adresszeile des Google Chromes ein: <strong
                 class="blue_highlight">chrome://extensions/</strong>.
               Du gelangst auf die Erweiterungen-Seite.</p>
-            <p class="blocksatz">Ziehe nun die Zip-Datei, die du dir heruntergeladen hast in den Bereich.
+            <p class="blocksatz">Wechsle in den Entwicklermode und ziehe nun die Zip-Datei, die du dir heruntergeladen hast in den Bereich.
               Das Symbol der Web-Extention erscheint in deiner Erweiterungen-Leiste neben dem Adressfeld. <br />
               Nun kannst du das Tool nutzen und Rechtstexte damit analysieren. </p>
           </div>
