Minor changes to the landing page. (refs #14)

--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -9,8 +9,7 @@
           <strong>Ja tut es!</strong>
           <br />
           <br />
-          <p><img src="assets/highlighter_copy.png" width="70%"/></p>
-
+          <p><img src="assets/highlighter_copy.png" width="70%" /></p>
         </div>
       </div>
     </div>
@@ -32,6 +31,7 @@
         Die <strong>Webextension</strong> ist verfügbar unter: ...
       </div>-->
   </div>
+
   <br />
   <br />
 
@@ -51,7 +51,6 @@
         <span class="heading_accordion">Analysiere Rechtstexte</span>
       </ng-template>
       <ng-template ngbPanelContent>
-
         <div class="row">
           <div class="col-md-6">
             <p><img src="assets/extention.jpg" width="500px" /></p>
@@ -67,7 +66,8 @@
             <p class="info_box blocksatz">Gib folgenden Befehl in deine Adresszeile des Google Chromes ein: <strong
                 class="blue_highlight">chrome://extensions/</strong>.
               Du gelangst auf die Erweiterungen-Seite.</p>
-            <p class="blocksatz">Wechsle in den Entwicklermode und ziehe nun die Zip-Datei, die du dir heruntergeladen hast in den Bereich.
+            <p class="blocksatz">Wechsle in den Entwicklermode und ziehe nun die Zip-Datei, die du dir heruntergeladen
+              hast in den Bereich.
               Das Symbol der Web-Extention erscheint in deiner Erweiterungen-Leiste neben dem Adressfeld. <br />
               Nun kannst du das Tool nutzen und Rechtstexte damit analysieren. </p>
           </div>
@@ -91,7 +91,6 @@
 
         <br />
         <br />
-
 
         <div class="row">
           <div class="col-md-6 text-center">
@@ -123,16 +122,12 @@
       </ng-template>
     </ngb-panel>
 
-
-
     <ngb-panel>
       <ng-template ngbPanelTitle>
         <span class="heading_accordion">Vergleiche zwei Rechtstexte miteinander</span>
       </ng-template>
       <ng-template ngbPanelContent>
-
         <div class="container-fluid">
-
           <div class="row">
             <div class="col-md-6">
               <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
@@ -147,7 +142,6 @@
             </div>
           </div>
 
-
           <div class="row">
             <div class="col-md-6">
               <p><img src="assets/placeholder_highlighter.png" width="500px" /></p>
@@ -159,7 +153,6 @@
               </p>
             </div>
           </div>
-
 
           <div class="row">
             <div class="col-md-6 text-center">
@@ -173,7 +166,6 @@
                 Du kannst auch einen AGB-Text analysieren,
                 indem Du die AGBs manuell aus dem Onlineshop in das
                 Textfeld hinein kopierst und auch den Link des Onlineshops einfügst.</p>
-
             </div>
           </div>
 
@@ -195,9 +187,5 @@
     </ngb-panel>
   </ngb-accordion>
 
-  <br />
-  <br />
-  <br />
-  <br />
-
+  <div class="spaceCreator"></div>
 </div>
