--- a/src/app/ui/landing/landing.component.css
+++ b/src/app/ui/landing/landing.component.css
@@ -2,7 +2,7 @@
     background-color: #F5F5F5;
     padding:30px;
     border-radius: 5px;
-    
+
 }
 
 .blocksatz {
@@ -27,4 +27,9 @@
 
 .heading_accordion {
     font-size: 1.4em !important;
+}
+
+.spaceCreator {
+  margin-top: 2%;
+  margin-bottom: 100px;
 }
