Shows the found and not found crieria and their occurence just as legend at the moment. (refs #28)

--- a/src/app/subsites/viz/viz.component.html
+++ b/src/app/subsites/viz/viz.component.html
@@ -1,7 +1,9 @@
 <div class="containerAlt">
   <div class="row">
     <div class="col-md-12 filterSection">
-      <p>Filter:</p>
+      <h5>Gesuchte Kriterien:</h5>
+      <p><small>In Klammer, die Anzahl der gefundenen Kriterien im Text / den Texten</small></p>
+      <app-tag-filter></app-tag-filter>
     </div>
   </div>
 
