--- a/src/app/subsites/viz/viz.component.css
+++ b/src/app/subsites/viz/viz.component.css
@@ -35,10 +35,10 @@
 }
 
 .filterSection {
-  height: 150px;
-  border: 1px dashed lime;
+  height: 120px;
   margin: -20px 0 30px 0;
   padding: 5px 25px 5px 25px;
+  overflow: auto;
 }
 
 span {
