--- a/src/app/subsites/viz/viz.component.html
+++ b/src/app/subsites/viz/viz.component.html
@@ -15,6 +15,7 @@
     </div>
     <div [hidden]="!isComparison" class="col-md-6">
       <div #dataContainer2 class="textContainer"></div>
+      <svg #dataOverview2 id="dataOverview2" class="textOverview"></svg>
     </div>
   </div>
 </div>
