--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~font-awesome/css/font-awesome.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 * {
   font-family: 'Montserrat', sans-serif;
