--- a/src/app/subsites/viz/viz.component.css
+++ b/src/app/subsites/viz/viz.component.css
@@ -25,6 +25,7 @@
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: .25rem;
+    overflow: hidden;
 }
 
 .textOverview {
