--- a/src/app/subsites/viz/viz.component.css
+++ b/src/app/subsites/viz/viz.component.css
@@ -2,8 +2,13 @@
     display: flex;
 }
 
-#data2Pane {
-    display: none;
+.contentParent>div>div {
+    display: flex;
+}
+
+.website {
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .containerAlt {
