--- a/src/app/ui/tag-filter/tag-filter.component.html
+++ b/src/app/ui/tag-filter/tag-filter.component.html
@@ -1,6 +1,6 @@
 <div class="tagWrapper">
   <span *ngFor="let term of searchTerms; let i = index;"
     class='spanTags' [style.background-color]="rulesClean[i]">
-    {{ term }}
-    ({{ foundOcc[i].length > 1 ? foundOcc[i].length : 0}})</span>
+    {{ term }}</span>
 </div>
+<!-- ({{ foundOcc[i].length }}) -->
